<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.isabel.mockupsv2.SingleChoiceQuestion">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_two"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:textSize="60sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:text="@string/q2_o1"
        android:id="@+id/btn_option_one"
        android:textSize="30sp"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_alignTop="@+id/btn_option_two"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:text="@string/q2_o2"
        android:id="@+id/btn_option_two"
        android:textSize="30sp"
        android:layout_marginTop="112dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:text="@string/q2_o3"
        android:id="@+id/button"
        android:textSize="30sp"
        android:layout_alignTop="@+id/btn_option_two"
        android:layout_toRightOf="@+id/btn_option_two"
        android:layout_toEndOf="@+id/btn_option_two"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp" />
</RelativeLayout>